...
    // the navigation happens only once on initial render if unauthenticated.
    React.useEffect(() => {
      // The StackActions.replace is equivalent to the 'replace' prop in the web 'Navigate'
      navigation.dispatch(
        StackActions.replace('Login', {
          // The returnUrl and userType are passed as route parameters
          returnUrl: 'Home', // In RN, you pass the screen name, not the path
          userType: 'client',
        })
      );
    }, [navigation]);

    // Return null while the navigation action takes effect to prevent
...
