appId: de.hairconnekt.app
---
- tapOn:
    id: "login-email-input"
- inputText: "provider@test.com"
- tapOn:
    id: "login-password-input"
- inputText: "TestPass123"
- hideKeyboard
- tapOn:
    id: "login-submit-button"
